--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,16 @@
 {
-    "env": {
-        "browser": false,
-        "commonjs": false,
-        "es6": true,
-        "node": false
-    },
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "sourceType": "module"
-    },
-    "rules": {
-        "no-const-assign": "warn",
-        "no-this-before-super": "warn",
-        "no-undef": "warn",
-        "no-unreachable": "warn",
-        "no-unused-vars": "warn",
-        "constructor-super": "warn",
-        "valid-typeof": "warn"
-    }
+  "extends": ["airbnb", "prettier"],
+  "plugins": ["flowtype"],
+  "rules": {
+    "semi": ["warn", "never"],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+  },
+  "parser": "babel-eslint",
+  "globals": {
+    "graphql": true
+  },
+  "env": {
+    "browser": true,
+    "node": true
+  }
 }
