--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-navigation": "^1.0.3",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "styled-components": "^3.0.2"
+    "styled-components": "^3.0.2",
+    "prop-types": "^15.6.0"
   }
 }
