--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
   "dependencies": {
     "@expo/vector-icons": "^6.2.2",
     "expo": "^25.0.0",
+    "prop-types": "^15.6.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
+    "react-native-keyboard-aware-scroll-view": "^0.4.3",
     "react-navigation": "^1.0.3",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "styled-components": "^3.0.2",
-    "prop-types": "^15.6.0"
+    "styled-components": "^3.0.2"
   }
 }
