--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "pomarn",
+  "name": "poma",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
     "babel-eslint": "^8.2.1",
+    "babel-preset-react-native-stage-0": "^1.0.1",
     "eslint": "^4.16.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
@@ -14,15 +15,12 @@
     "flow": "^0.2.3",
     "flow-bin": "0.56.0",
     "jest-expo": "25.0.0",
-    "react-native-scripts": "1.10.0",
     "react-test-renderer": "16.2.0"
   },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "test": "node node_modules/jest/bin/jest.js",
     "flow": "flow"
   },
@@ -30,12 +28,12 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^6.2.2",
-    "expo": "^25.0.0",
     "prop-types": "^15.6.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
+    "react-native-haptic": "^1.0.5",
     "react-native-keyboard-aware-scroll-view": "^0.4.3",
+    "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.3",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
