Add redux-sagas for side effects and clean up code

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "flow": "^0.2.3",
     "flow-bin": "0.56.0",
     "jest-expo": "25.0.0",
-    "react-test-renderer": "16.2.0"
+    "react-test-renderer": "16.2.0",
   },
   "scripts": {
     "start": "react-native start",
@@ -37,6 +37,9 @@
     "react-navigation": "^1.0.3",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "styled-components": "^3.0.2"
+    "redux-saga": "^0.16.0",
+    "reselect": "^3.0.1",
+    "styled-components": "^3.0.2",
+    "redux-logger": "^3.0.6"
   }
 }
